# C-Programing-Language

./: README.md
Debug/: test01_1 V4.cpp  test01_2 V4.cpp  test02_1.cpp  test02_10.cpp  test02_2.cpp  test02_3.cpp  test02_4.cpp  test02_5.cpp  test02_6.cpp  test02_7.cpp  test02_8.cpp  test02_9.cpp  test03_1.cpp  test03_2.cpp  test04_1.cpp  test04_2.cpp  test04_3.cpp  test04_4.cpp  test05_1.cpp  test05_2.cpp  test06_1.cpp  test06_2.cpp  test07_1.cpp  test07_2.cpp  test07_3.cpp  test07_4.cpp  test07_5.cpp  test07_6.cpp  test08_1.cpp  test08_2.cpp  test08_3.cpp  test08_4.cpp  test09_1.c  test09_2.cpp  test10_1_cal.cpp  test10_1_main.cpp  test10_1_vol.cpp  test10_2.cpp  test11_1.cpp  test11_2.cpp  (+4 more)
Lab/ch01/: 1-1.c  1-2.c  CMakeLists.txt
Lab/ch02/: 2-1-1.c  2-1-2.c  2-1-3.c  2-1-4.c  2-1-5.c  2-1-6.c  2-2-2.c  2-2-4.c  2-2-5.c  2-2-6.c  2-2-7.c  2-3-1.c  2-3-2.c  2-3-3.c  2-3-4.c  2-3-5.c  2-3-6.c  2-3-7.c  2-3-8.c  2-3-9.c  2-4-1.c  2-4-3.c  2-4-4.c  2-4-5.c  2-4-7.c  2-4-8.c  2-5-1.c  2-5-2.c  2-5-3.c  2-5-4.c  2-5-5.c  2-5-6.c  CMakeLists.txt
Lab/ch03/: 3-1.c  3-10.c  3-11.c  3-2.c  3-4.c  3-5.c  3-6.c  3-7.c  3-8.c  3-9.c  CMakeLists.txt
Lab/ch04/: 4-1-1.c  4-1-12.c  4-1-2.c  4-1-3.c  4-1-4.c  4-1-5.c  4-1-6.c  4-1-7.c  4-1-8.c  4-1-9.c  4-2-1.c  4-2-3.c  4-2-5.c  4-2-6.c  4-2-7.c  4-2-8.c  4-2-9.c  CMakeLists.txt
Lab/ch05/: 5-10.c  5-11.c  5-3.c  5-4.c  5-5.c  5-6.c  5-7.c  5-8.c  5-9.c  CMakeLists.txt
Lab/ch06/: 6-1.c  6-10.c  6-11.c  6-3.c  6-4.c  6-5.c  6-6.c  6-8.c  6-9.c  CMakeLists.txt
Lab/ch07/: 7-1-2.c  7-1-3.c  7-1-4.c  7-1-5.c  7-1-7.c  7-1-8.c  7-1-9.c  7-2-1.c  7-2-2.c  7-2-4.c  7-2-5.c  7-2-7.c  7-2-8.c  7-3-1.c  7-3-2.c  7-3-3.c  7-3-4.c  CMakeLists.txt
Lab/ch08/: 8-1-1.c  8-1-2.c  8-1-3.c  8-1-4.c  8-1-6.c  8-1-7.c  8-1-8.c  8-1-9.c  8-2-1.c  8-2-10.c  8-2-2.c  8-2-3.c  8-2-4.c  8-2-5.c  8-2-6.c  8-2-8.c  8-2-9.c  CMakeLists.txt
Lab/ch09/: 9-4.c  9-6.c
Lab/ch10/: 10-10.c  10-2.c  10-3.c  10-4.c  10-5.c  10-6.c  10-8.c
Lab/ch11/: 11-1-2.c  11-1-3.c  11-1-4.c  11-1-6.c  11-1-8.c  11-2-1.c  11-2-2.c  11-2-3.c  11-2-4.c  11-2-5.c  11-2-6.c  11-2-7.c  11-2-8.c  11-2-9.c
Primary/ch02/exercise/: 2-1.c  2-4.c  2-6.c  CMakeLists.txt
Primary/ch02/practice/: 2-1.c  2-12.c  2-13.c  2-14.c  2-15.c  2-17.c  2-18.c  2-3.c  2-4.c  2-6.c  2-9.c  CMakeLists.txt
Primary/ch03/exercise/: 3-1.c  3-2.c  3-3.c  3-5.c  CMakeLists.txt
Primary/ch03/practice/: 3-3.c  3-4.c  3-5.c  3-7.c  3-8.c  CMakeLists.txt
Primary/ch04/exercise/: 4-10.c  4-11.c  4-2.c  4-3.c  4-4.c  4-5.c  4-6.c  4-7.c  4-8.c  4-9.c  CMakeLists.txt
Primary/ch04/practice/: 4-10.c  4-11.c  4-3.c  4-6.c  4-7.c  CMakeLists.txt
Primary/ch05/exercise/: 5-1.c  5-2.c  5-3.c  5-4.c  5-5.c  5-7.c  CMakeLists.txt
Primary/ch05/practice/: 5-1.c  5-2.c  5-3.c  CMakeLists.txt
Primary/ch06/exercise/: 6-1.c  6-3.c  6-4.c  6-5.c  6-6.c  6-7.c  6-8.c  CMakeLists.txt
Primary/ch06/practice/: 6-3.c  CMakeLists.txt
Primary/ch07/exercise/: 7-1.c  7-2.c  7-3.c  7-5.c  7-6.c  7-7.c  7-8.c  CMakeLists.txt
Primary/ch07/practice/: 7-10.c  7-11.c  7-2.c  7-3.c  7-4.c  7-7.c  7-8.c  7-9.c  CMakeLists.txt
Primary/ch08/exercise/: 8-1.c  8-2.c  8-3.c  8-4.c  8-5.c  8-6.c  8-7.c  8-8.c  8-9.c  CMakeLists.txt
Primary/ch08/practice/: 8-8.c  CMakeLists.txt
Primary/ch09/exercise/: 9-2.c  9-3.c  9-4.c  9-5.c  9-6.c  CMakeLists.txt
Primary/ch10/exercise/: 10-1.c  10-11.c  10-2.c  10-3.c  10-4.c  10-5.c  10-6.c  10-7.c  10-8.c
Primary/ch10/practice/: 10-1.c  CMakeLists.txt
Primary/ch11/exercise/: 11-1.c  11-2.c  11-3.c  11-4.c  11-5.c  11-6.c  11-7.c  11-8.c
Primary/ch11/practice/: 11-4.c
Source/ch01/: 1_01.c  CMakeLists.txt
Source/ch02/: 2_01.c  2_02.c  2_03.c  2_04.c  2_05.c  2_06.c  2_07.c  2_08.c  2_09.c  2_10.c  2_11.c  CMakeLists.txt
Source/ch03/: 3_01.c  3_02.c  3_03.c  3_04.c  3_05.c  3_07.c  3_08.c  3_09.c  3_10.c  CMakeLists.txt
Source/ch04/: 4_01.c  4_02.c  4_03.c  4_04.c  4_05_1.c  4_05_2.c  4_05_3.c  4_06_1.c  4_06_2.c  4_07_1.c  4_07_2.c  4_07_3.c  4_08_1.c  4_08_2.c  4_09.c  4_10.c  4_11_1.c  4_11_2.c  4_12.c  CMakeLists.txt
Source/ch05/: 5_01.c  5_02.c  5_03.c  5_04.c  5_05.c  5_06.c  5_07.c  5_08.c  5_09.c  CMakeLists.txt
Source/ch06/: 6_01.c  6_02.c  6_03.c  6_05.c  CMakeLists.txt
Source/ch07/: 7_01.c  7_02.c  7_03.c  7_04_1.c  7_04_2.c  7_05.c  7_06.c  7_07_1.c  7_07_2.c  7_08.c  7_09.c  7_10.c  7_11.c  7_12.c  7_13.c  7_14.c  CMakeLists.txt
Source/ch08/: 8_01.c  8_02.c  8_03.c  8_04.c  8_05.c  8_06.c  8_07.c  8_08.c  8_09_A.c  8_09_B.c  8_10.c  CMakeLists.txt
Source/ch09/: 9_01.c  9_02.c  9_03.c  CMakeLists.txt
Source/ch10/: 10_01.c  10_02.c  10_03.c  10_04_1.c  10_04_2.c  10_04_3.c  10_05.c  10_06.c  10_07.c  10_08.c  10_09.c  CMakeLists.txt  length.h
Source/ch10/10_10/: computing.c  input_output.c  main.c  search.c  student_system.h  update.c
Source/ch11/: 11_01_1.c  11_01_2.c  11_02.c  11_03_1.c  11_03_2.c  11_04.c  11_05.c  11_06.c  11_07.c  11_08.c  11_09.c  11_10.c  CMakeLists.txt
Source/ch12/: 12_01.c  12_02.c  12_03.c  12_04.c  12_05.c  12_06.c  CMakeLists.txt  cashbox.txt  f12-2.txt  f12-5.txt  prime.txt
Supplement/PPT/: ._chap01_引言 201702.pptx  ._chap05_函数 201702.pptx  ._chap07_数组 201702.pptx  ._chap10_函数与程序结构 201702.pptx  ._chap11_指针进阶 201702.pptx  ._chap12_文件 201702.pptx  chap00_课程介绍 .pptx  chap01_引言.pptx  chap02_用C语言编写程序.pptx  chap03_分支结构.pptx  chap04_循环结构.pptx  chap05_函数.pptx  chap06_回顾数据类型和表达式.pptx  chap07_数组.pptx  chap08_指针.pptx  chap09_结构.pptx  chap10_函数与程序结构.pptx  chap11_指针进阶.pptx  chap12_文件.pptx
Supplement/杂项/: PTA平台各类题目集建议方案（实验+测验+例题+练习+习题）.xlsx  教材信息及教学资源.doc
