cmake_minimum_required(VERSION 3.25)
project(ch02 C)

set(CMAKE_C_STANDARD 11)

add_executable(2-1-1 2-1-1.c)
add_executable(2-1-2 2-1-2.c)
add_executable(2-1-3 2-1-3.c)
add_executable(2-1-4 2-1-4.c)
add_executable(2-1-5 2-1-5.c)
add_executable(2-1-6 2-1-6.c)
add_executable(2-1-7 2-1-7.c)
add_executable(2-2-1 2-2-1.c)
add_executable(2-2-2 2-2-2.c)
add_executable(2-2-3 2-2-3.c)
add_executable(2-2-4 2-2-4.c)
add_executable(2-2-5 2-2-5.c)
add_executable(2-2-6 2-2-6.c)
add_executable(2-2-7 2-2-7.c)
add_executable(2-3-1 2-3-1.c)
add_executable(2-3-2 2-3-2.c)
add_executable(2-3-3 2-3-3.c)
add_executable(2-3-4 2-3-4.c)
add_executable(2-3-5 2-3-5.c)
add_executable(2-3-6 2-3-6.c)
add_executable(2-3-7 2-3-7.c)
add_executable(2-3-8 2-3-8.c)
add_executable(2-3-9 2-3-9.c)
add_executable(2-4-1 2-4-1.c)
add_executable(2-4-2 2-4-2.c)
add_executable(2-4-3 2-4-3.c)
add_executable(2-4-4 2-4-4.c)
add_executable(2-4-5 2-4-5.c)
add_executable(2-4-6 2-4-6.c)
add_executable(2-4-7 2-4-7.c)
add_executable(2-4-8 2-4-8.c)
add_executable(2-5-1 2-5-1.c)
add_executable(2-5-2 2-5-2.c)
add_executable(2-5-3 2-5-3.c)
add_executable(2-5-4 2-5-4.c)
add_executable(2-5-5 2-5-5.c)
add_executable(2-5-6 2-5-6.c)
add_executable(2-5-7 2-5-7.c)