cmake_minimum_required(VERSION 3.25)
project(ch03 C)

set(CMAKE_C_STANDARD 11)

add_executable(3-1 3-1.c)
add_executable(3-2 3-2.c)
add_executable(3-3 3-3.c)
add_executable(3-4 3-4.c)
add_executable(3-5 3-5.c)
add_executable(3-6 3-6.c)
add_executable(3-7 3-7.c)
add_executable(3-8 3-8.c)
add_executable(3-9 3-9.c)
add_executable(3-10 3-10.c)
add_executable(3-11 3-11.c)
