cmake_minimum_required(VERSION 3.25)
project(ch04 C)

set(CMAKE_C_STANDARD 11)

add_executable(4-1-1 4-1-1.c)
add_executable(4-1-2 4-1-2.c)
add_executable(4-1-3 4-1-3.c)
add_executable(4-1-4 4-1-4.c)
add_executable(4-1-5 4-1-5.c)
add_executable(4-1-6 4-1-6.c)
add_executable(4-1-7 4-1-7.c)
add_executable(4-1-8 4-1-8.c)
add_executable(4-1-9 4-1-9.c)
add_executable(4-1-10 4-1-10.c)
add_executable(4-1-11 4-1-11.c)
add_executable(4-2-1 4-2-1.c)
add_executable(4-2-2 4-2-2.c)
add_executable(4-2-3 4-2-3.c)
add_executable(4-2-4 4-2-4.c)
add_executable(4-2-5 4-2-5.c)
add_executable(4-2-6 4-2-6.c)
add_executable(4-2-7 4-2-7.c)
add_executable(4-2-8 4-2-8.c)
add_executable(4-2-9 4-2-9.c)
