cmake_minimum_required(VERSION 3.25)
project(ch05 C)

set(CMAKE_C_STANDARD 11)

add_executable(5-1 5-1.c)
add_executable(5-2 5-2.c)
add_executable(5-3 5-3.c)
add_executable(5-4 5-4.c)
add_executable(5-5 5-5.c)
add_executable(5-6 5-6.c)
add_executable(5-7 5-7.c)
add_executable(5-8 5-8.c)
add_executable(5-9 5-9.c)
add_executable(5-10 5-10.c)
add_executable(5-11 5-11.c)