cmake_minimum_required(VERSION 3.25)
project(ch06 C)

set(CMAKE_C_STANDARD 11)

add_executable(6-1 6-1.c)
add_executable(6-2 6-2.c)
add_executable(6-3 6-3.c)
add_executable(6-4 6-4.c)
add_executable(6-5 6-5.c)
add_executable(6-6 6-6.c)
add_executable(6-7 6-7.c)
add_executable(6-8 6-8.c)
add_executable(6-9 6-9.c)
add_executable(6-10 6-10.c)
add_executable(6-11 6-11.c)
