cmake_minimum_required(VERSION 3.25)
project(ch07 C)

set(CMAKE_C_STANDARD 11)

add_executable(7-1-1 7-1-1.c)
add_executable(7-1-2 7-1-2.c)
add_executable(7-1-3 7-1-3.c)
add_executable(7-1-4 7-1-4.c)
add_executable(7-1-5 7-1-5.c)
add_executable(7-1-6 7-1-6.c)
add_executable(7-1-7 7-1-7.c)
add_executable(7-1-8 7-1-8.c)
add_executable(7-1-9 7-1-9.c)
add_executable(7-1-10 7-1-10.c)
add_executable(7-1-11 7-1-11.c)

add_executable(7-2-1 7-2-1.c)
add_executable(7-2-2 7-2-2.c)
add_executable(7-2-3 7-2-3.c)
add_executable(7-2-4 7-2-4.c)
add_executable(7-2-5 7-2-5.c)
add_executable(7-2-6 7-2-6.c)
add_executable(7-2-7 7-2-7.c)
add_executable(7-2-8 7-2-8.c)
add_executable(7-2-9 7-2-9.c)
add_executable(7-2-10 7-2-10.c)
add_executable(7-3-1 7-3-1.c)
add_executable(7-3-2 7-3-2.c)
add_executable(7-3-3 7-3-3.c)
add_executable(7-3-4 7-3-4.c)
