cmake_minimum_required(VERSION 3.25)
project(ch08 C)

set(CMAKE_C_STANDARD 11)

add_executable(8-1-1 8-1-1.c)
add_executable(8-1-2 8-1-2.c)
add_executable(8-1-3 8-1-3.c)
add_executable(8-1-4 8-1-4.c)
add_executable(8-1-5 8-1-5.c)
add_executable(8-1-6 8-1-6.c)
add_executable(8-1-7 8-1-7.c)
add_executable(8-1-8 8-1-8.c)
add_executable(8-1-9 8-1-9.c)

add_executable(8-2-1 8-2-1.c)
add_executable(8-2-2 8-2-2.c)
add_executable(8-2-3 8-2-3.c)
add_executable(8-2-4 8-2-4.c)
add_executable(8-2-5 8-2-5.c)
add_executable(8-2-6 8-2-6.c)
add_executable(8-2-7 8-2-7.c)
add_executable(8-2-8 8-2-8.c)
add_executable(8-2-9 8-2-9.c)
add_executable(8-2-10 8-2-10.c)
