cmake_minimum_required(VERSION 3.25)
project(ch02 C)

set(CMAKE_C_STANDARD 11)

add_executable(201 2_01.c)
add_executable(202 2_02.c)
add_executable(203 2_03.c)
add_executable(204 2_04.c)
add_executable(205 2_05.c)
add_executable(206 2_06.c)
add_executable(207 2_07.c)
add_executable(208 2_08.c)
add_executable(209 2_09.c)
add_executable(210 2_10.c)
add_executable(211 2_11.c)