cmake_minimum_required(VERSION 3.25)
project(ch03 C)

set(CMAKE_C_STANDARD 11)

add_executable(3_01 3_01.c)
add_executable(3_02 3_02.c)
add_executable(3_03 3_03.c)
add_executable(3_04 3_04.c)
add_executable(3_05 3_05.c)
add_executable(3_07 3_07.c)
add_executable(3_08 3_08.c)
add_executable(3_09 3_09.c)
add_executable(3_10 3_10.c)
