cmake_minimum_required(VERSION 3.25)
project(ch04 C)

set(CMAKE_C_STANDARD 11)

add_executable(4_01 4_01.c)
add_executable(4_02 4_02.c)
add_executable(4_03 4_03.c)
add_executable(4_04 4_04.c)
add_executable(4_05_1 4_05_1.c)
add_executable(4_05_2 4_05_2.c)
add_executable(4_05_3 4_05_3.c)
add_executable(4_06_1 4_06_1.c)
add_executable(4_06_2 4_06_2.c)
add_executable(4_07_1 4_07_1.c)
add_executable(4_07_2 4_07_2.c)
add_executable(4_07_3 4_07_3.c)
add_executable(4_08_1 4_08_1.c)
add_executable(4_08_2 4_08_2.c)
add_executable(4_09 4_09.c)
add_executable(4_10 4_10.c)
add_executable(4_11_1 4_11_1.c)
add_executable(4_11_2 4_11_2.c)
add_executable(4_12 4_12.c)
