cmake_minimum_required(VERSION 3.25)
project(ch05 C)

set(CMAKE_C_STANDARD 11)

add_executable(5_01 5_01.c)
add_executable(5_02 5_02.c)
add_executable(5_03 5_03.c)
add_executable(5_04 5_04.c)
add_executable(5_05 5_05.c)
add_executable(5_06 5_06.c)
add_executable(5_07 5_07.c)
add_executable(5_08 5_08.c)
add_executable(5_09 5_09.c)