cmake_minimum_required(VERSION 3.25)
project(ch07 C)

set(CMAKE_C_STANDARD 11)

add_executable(7_01 7_01.c)
add_executable(7_02 7_02.c)
add_executable(7_03 7_03.c)
add_executable(7_04_1 7_04_1.c)
add_executable(7_04_2 7_04_2.c)
add_executable(7_05 7_05.c)
add_executable(7_06 7_06.c)
add_executable(7_07_1 7_07_1.c)
add_executable(7_07_2 7_07_2.c)
add_executable(7_08 7_08.c)
add_executable(7_09 7_09.c)
add_executable(7_10 7_10.c)
add_executable(7_11 7_11.c)
add_executable(7_12 7_12.c)
add_executable(7_13 7_13.c)
add_executable(7_14 7_14.c)