cmake_minimum_required(VERSION 3.25)
project(ch10 C)

set(CMAKE_C_STANDARD 11)

add_executable(10_01 10_01.c)
add_executable(10_02 10_02.c)
add_executable(10_03 10_03.c)
add_executable(10_04_1 10_04_1.c)
add_executable(10_04_2 10_04_2.c)
add_executable(10_04_3 10_04_3.c)
add_executable(10_05 10_05.c)
add_executable(10_06 10_06.c)
add_executable(10_07 10_07.c)
add_executable(10_08 10_08.c)
add_executable(10_09 10_09.c)
