cmake_minimum_required(VERSION 3.25)
project(practice C)

set(CMAKE_C_STANDARD 11)

add_executable(2-1 2-1.c)
add_executable(2-3 2-3.c)
add_executable(2-4 2-4.c)
add_executable(2-6 2-6.c)
add_executable(2-8 2-8.c)
add_executable(2-9 2-9.c)
add_executable(2-10 2-10.c)
add_executable(2-11 2-11.c)
add_executable(2-12 2-12.c)
add_executable(2-13 2-13.c)
add_executable(2-14 2-14.c)
add_executable(2-15 2-15.c)
add_executable(2-17 2-17.c)
add_executable(2-18 2-18.c)